--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -45,6 +45,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.18.0",
     "@openzeppelin/contracts": "^4.8.1",
     "@typechain/ethers-v6": "^0.5.1",
     "dotenv": "^16.0.3",
